# pypatch-url

./: .gitignore  Makefile  README  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
pypatch_url/: __init__.py  command.py  patch.py
tests/: README.md  conftest.py  test_basic.py  test_cli.py  test_helpers.py  test_integration.py  test_path_stripping.py  test_url_support.py
tests/data/: __init__.py  nested_path.patch  sample.patch
